fix swagger (#33)
* fix: adding swagger env var
fix: swago missing type (swago bug)

* refactor: replaced validation to client error
