# transports/http/payment.go
@@ -4,9 +4,8 @@ import (
 	"net/http"
 
 	"github.com/labstack/echo/v4"
-	"github.com/pkg/errors"
-
 	"github.com/libsv/go-p4"
+	"github.com/pkg/errors"
 )
 
 // paymentHandler is an http handler that supports BIP-270 requests.
@@ -35,7 +34,7 @@ func (h *paymentHandler) RegisterRoutes(g *echo.Group) {
 // @Param body body p4.PaymentCreate true "payment message used in BIP270"
 // @Success 201 {object} p4.PaymentACK "if success, error code will be empty, otherwise it will be filled in with reason"
 // @Failure 404 {object} p4.ClientError "returned if the paymentID has not been found"
-// @Failure 400 {object} validator.ErrValidation "returned if the user input is invalid, usually an issue with the paymentID"
+// @Failure 400 {object} p4.ClientError "returned if the user input is invalid, usually an issue with the paymentID"
 // @Failure 500 {string} string "returned if there is an unexpected internal error"
 // @Router /api/v1/payment/{paymentID} [POST].
 func (h *paymentHandler) createPayment(e echo.Context) error {
