# transports/http/payment_request.go
@@ -9,10 +9,12 @@ import (
 	"github.com/libsv/go-p4"
 )
 
-// paymentRequestHandler is an http handler that supports BIP-270 requests.
-type paymentRequestHandler struct {
-	svc p4.PaymentRequestService
-}
+type (
+	// paymentRequestHandler is an http handler that supports BIP-270 requests.
+	paymentRequestHandler struct {
+		svc p4.PaymentRequestService
+	}
+)
 
 // NewPaymentRequestHandler will create and return a new PaymentRequestHandler.
 func NewPaymentRequestHandler(svc p4.PaymentRequestService) *paymentRequestHandler {
@@ -35,7 +37,7 @@ func (h *paymentRequestHandler) RegisterRoutes(g *echo.Group) {
 // @Param paymentID path string true "Payment ID"
 // @Success 201 {object} p4.PaymentRequest "contains outputs, merchant data and expiry information, used by the payee to construct a transaction"
 // @Failure 404 {object} p4.ClientError "returned if the paymentID has not been found"
-// @Failure 400 {object} validator.ErrValidation "returned if the user input is invalid, usually an issue with the paymentID"
+// @Failure 400 {object} p4.ClientError "returned if the user input is invalid, usually an issue with the paymentID"
 // @Failure 500 {string} string "returned if there is an unexpected internal error"
 // @Router /api/v1/payment/{paymentID} [GET].
 func (h *paymentRequestHandler) buildPaymentRequest(e echo.Context) error {
